log
Tue 27 Sep 2022 12:25:53 AM UTC: 
 tests:  1|8
total_score: 0/70
95bf484
Tue 27 Sep 2022 12:30:39 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:40:13: error: unused variable ‘newTree’ [-Werror=unused-variable]
   40 |   TreeMap * newTree = (TreeMap *) malloc(sizeof(TreeMap));
      |             ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
9e688d3
Tue 27 Sep 2022 12:31:35 AM UTC: 
 treemap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:43:3: error: ‘neTree’ undeclared (first use in this function); did you mean ‘newTree’?
   43 |   neTree->root = NULL;
      |   ^~~~~~
      |   newTree
treemap.c:43:3: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
b919036
Tue 27 Sep 2022 12:32:20 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:43:3: error: ‘neTree’ undeclared (first use in this function); did you mean ‘newTree’?
   43 |   neTree->root = NULL
      |   ^~~~~~
      |   newTree
treemap.c:43:3: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:44:3: error: expected ‘;’ before ‘newTree’
   44 |   newTree->lower_than = lower_than;
      |   ^~~~~~~
Compilation failed
2d752aa
Tue 27 Sep 2022 12:32:39 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:43:3: error: ‘neTree’ undeclared (first use in this function); did you mean ‘newTree’?
   43 |   neTree->root = NULL;
      |   ^~~~~~
      |   newTree
treemap.c:43:3: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
41667a0
Tue 27 Sep 2022 12:33:05 AM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|8
total_score: 0/70
266f792
Tue 27 Sep 2022 12:33:40 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
26ba5bf
Tue 27 Sep 2022 12:35:06 AM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:50:13: error: unused variable ‘newNode’ [-Werror=unused-variable]
   50 |   TreeNode *newNode = createTreeNode(key, value);
      |             ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
c4ebbcf
Tue 27 Sep 2022 12:35:49 AM UTC: 
 treemap.c | 2 ++
 1 file changed, 2 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:51:3: error: ‘aux’ undeclared (first use in this function)
   51 |   aux = tree->current;
      |   ^~~
treemap.c:51:3: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
af8987c
Tue 27 Sep 2022 12:36:24 AM UTC: 
 treemap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  4|7
total_score: 5/70
02bb726
Tue 27 Sep 2022 12:37:14 AM UTC: 
 treemap.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  0|0
6f9bb6b
Tue 27 Sep 2022 12:38:45 AM UTC: 
 treemap.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  0|0
f0b2543
Tue 27 Sep 2022 12:39:33 AM UTC: 
 treemap.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
 tests:  15|4
total_score: 25/70
08ec682
Tue 27 Sep 2022 12:40:48 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘removeNode’:
treemap.c:77:13: error: unused variable ‘parentNode’ [-Werror=unused-variable]
   77 |   TreeNode *parentNode = node->parent;
      |             ^~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
fdf7424
Tue 27 Sep 2022 12:41:43 AM UTC: 
 treemap.c | 9 +++++++++
 1 file changed, 9 insertions(+)
test.c: In function ‘removeNode’:
test.c:503:5: error: ‘main’ is normally a non-static function [-Werror=main]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:606:1: error: expected declaration or statement at end of input
  606 | }
      | ^
At top level:
test.c:503:5: error: ‘main’ defined but not used [-Werror=unused-function]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
cc1: all warnings being treated as errors
Compilation failed
bb0138b
Tue 27 Sep 2022 12:42:27 AM UTC: 
 treemap.c | 6 ++++++
 1 file changed, 6 insertions(+)
test.c: In function ‘removeNode’:
test.c:503:5: error: ‘main’ is normally a non-static function [-Werror=main]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:606:1: error: expected declaration or statement at end of input
  606 | }
      | ^
test.c:606:1: error: expected declaration or statement at end of input
At top level:
test.c:503:5: error: ‘main’ defined but not used [-Werror=unused-function]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
cc1: all warnings being treated as errors
Compilation failed
b18e0d0
Tue 27 Sep 2022 12:43:07 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
test.c: In function ‘removeNode’:
test.c:503:5: error: ‘main’ is normally a non-static function [-Werror=main]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:606:1: error: expected declaration or statement at end of input
  606 | }
      | ^
At top level:
test.c:503:5: error: ‘main’ defined but not used [-Werror=unused-function]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
cc1: all warnings being treated as errors
Compilation failed
9a64c15
Tue 27 Sep 2022 12:44:05 AM UTC: 
 treemap.c | 16 ++++++++++++++++
 1 file changed, 16 insertions(+)
 tests:  18|3
total_score: 40/70
1497f2d
Tue 27 Sep 2022 12:45:18 AM UTC: 
 treemap.c | 4 ++++
 1 file changed, 4 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘upperBound’:
treemap.c:142:14: error: variable ‘node’ set but not used [-Werror=unused-but-set-variable]
  142 |   TreeNode * node;
      |              ^~~~
cc1: all warnings being treated as errors
Compilation failed
61b8e79
Tue 27 Sep 2022 12:46:10 AM UTC: 
 treemap.c | 7 +++++++
 1 file changed, 7 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘upperBound’:
treemap.c:142:14: error: variable ‘node’ set but not used [-Werror=unused-but-set-variable]
  142 |   TreeNode * node;
      |              ^~~~
cc1: all warnings being treated as errors
Compilation failed
d57daf2
Tue 27 Sep 2022 12:46:31 AM UTC: 
 treemap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘upperBound’:
treemap.c:142:14: error: variable ‘node’ set but not used [-Werror=unused-but-set-variable]
  142 |   TreeNode * node;
      |              ^~~~
cc1: all warnings being treated as errors
Compilation failed
1d4a0a3
Tue 27 Sep 2022 12:46:38 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘upperBound’:
treemap.c:150:49: error: expected ‘;’ before ‘}’ token
  150 |       }tree -> current = tree -> current -> left
      |                                                 ^
      |                                                 ;
  151 |     }
      |     ~                                            
treemap.c:142:14: error: variable ‘node’ set but not used [-Werror=unused-but-set-variable]
  142 |   TreeNode * node;
      |              ^~~~
cc1: all warnings being treated as errors
Compilation failed
fdcc3db
Tue 27 Sep 2022 12:46:52 AM UTC: 
 treemap.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘upperBound’:
treemap.c:142:14: error: variable ‘node’ set but not used [-Werror=unused-but-set-variable]
  142 |   TreeNode * node;
      |              ^~~~
treemap.c: At top level:
treemap.c:160:3: error: expected identifier or ‘(’ before ‘return’
  160 |   return NULL;
      |   ^~~~~~
treemap.c:161:1: error: expected identifier or ‘(’ before ‘}’ token
  161 | }
      | ^
treemap.c: In function ‘upperBound’:
treemap.c:159:3: error: control reaches end of non-void function [-Werror=return-type]
  159 |   }
      |   ^
cc1: all warnings being treated as errors
Compilation failed
ae92d66
Tue 27 Sep 2022 12:47:01 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘upperBound’:
treemap.c:142:14: error: variable ‘node’ set but not used [-Werror=unused-but-set-variable]
  142 |   TreeNode * node;
      |              ^~~~
cc1: all warnings being treated as errors
Compilation failed
d59eacc
